[package]
name = "server-image-resize"
version = "0.1.0"
edition = "2024"

[package.metadata.lambda.env]
S3_BUCKET = "david-robert-ansart-clap"

[dependencies]
lambda_http = "0.13.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.77.0"
tokio = { version = "1", features = ["macros"] }
image = "0.25.5"
fast_image_resize = { version = "5.1.2", features = ["image"] }
bytes = "1.10.0"
