[package]
name = "server-preview-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["apigw"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-lambda = "1.73.0"
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.140"